--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4",
+    "webpack-require": "^0.0.16",
     "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
